veecle-os-runtime-macros/tests/ui/storable/data_type.stderr
error: unknown attribute argument
 --> tests/ui/storable/data_type.rs:2:12
  |
2 | #[storable(data_type = u8)]
  |            ^^^^^^^^^
