veecle-os-runtime-macros/tests/ui/storable/data_type.rs
#[derive(veecle_os_runtime_macros::Storable)]
#[storable(data_type = u8)]
pub struct Sensor;

fn main() {}
